tests/tests/neg/error_messages/desugar/invalid_lit_suffix.rs
#[flux::sig(fn(i32[0asd]))] //~ ERROR invalid suffix `asd` for number literal
fn test00(x: i32) {}
